# super-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dependency-tree.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  router.py
.docker/: Dockerfile
.github/: issue_template.md  pull_request_template.md
.github/workflows/: lint.yml
api/: delete.py  ingest.py  query.py
auth/: user.py
dev/: embedding.ipynb  walkthrough.ipynb
encoders/: __init__.py  base.py  cohere.py  fastembed.py  huggingface.py  openai.py
models/: api.py  aws_s3.py  delete.py  document.py  file.py  google_drive.py  ingest.py  query.py  vector_database.py
sandboxes/e2b/super-rag/: e2b.Dockerfile  e2b.toml  e2b_matplotlib_backend.py
service/: code_interpreter.py  embedding.py  ingest.py  router.py  splitter.py  vector_database.py
service/kafka/: config.py  consume.py  consumer.py  producer.py
service/redis/: client.py  ingest_task_manager.py
utils/: file.py  openrouter.py  summarise.py  table_parser.py
vectordbs/: __init__.py  astra.py  base.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
